load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["pdclient.go"],
    importpath = "github.com/chickenandpork/pagerduty-oncall/lib",
    visibility = ["//visibility:public"],
    deps = ["@com_github_pagerduty_go_pagerduty//:go_default_library"],
)
